# omni-cede

./: .gitignore  Cargo.toml  OMNICHANNEL_PLAN.md  README.md  agents.md  claude.md
src/: config.rs  error.rs  lib.rs  notification_delivery.rs  scheduler.rs  types.rs
src/agent/: orchestrator.rs  subagent.rs
src/api/: mod.rs
src/browser/: cdp.rs  mod.rs  snapshot.rs  stealth.rs  store.rs  tools.rs  webmcp.rs  workflow.rs
src/channels/: discord.rs  hooks.rs  mod.rs  pipeline.rs  registry.rs  telegram.rs  types.rs  webchat.rs  webhook.rs
src/cli/: graph_tui.rs  graph_viz.rs  mod.rs
src/db/: queries.rs  schema.rs
src/hnsw/: mod.rs
src/identity/: mod.rs
src/llm/: mod.rs
src/memory/: mod.rs
src/session/: mod.rs
src/tools/: mod.rs
tests/: integration.rs
