[package]
name    = "cortex-embedded"
version = "0.1.0"
edition = "2021"

[lib]
name = "cortex_embedded"
path = "src/lib.rs"

[[bin]]
name = "cortex"
path = "src/bin/cortex.rs"

[dependencies]
rusqlite         = { version = "0.31", features = ["bundled"] }
instant-distance = "0.6"
fastembed        = "4"
tokio            = { version = "1", features = ["full"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
uuid             = { version = "1", features = ["v4"] }
thiserror        = "2"
async-channel    = "2"
lru              = "0.12"
clap             = { version = "4", features = ["derive"] }
reqwest          = { version = "0.12", features = ["json"] }
futures          = "0.3"
bytemuck         = { version = "1", features = ["derive"] }
async-trait      = "0.1"
chrono           = "0.4"
ratatui          = "0.29"
crossterm        = { version = "0.28", features = ["event-stream"] }
