[package]
name    = "omni-cede"
version = "0.1.0"
edition = "2021"
description = "Omnichannel self-aware agent. Fork of cede with HTTP API, identity, and session management."

[lib]
name = "omni_cede"
path = "src/lib.rs"

[[bin]]
name = "omni-cede"
path = "src/bin/omni_cede.rs"

[dependencies]
rusqlite         = { version = "0.31", features = ["bundled"] }
instant-distance = "0.6"
fastembed        = "4"
tokio            = { version = "1", features = ["full"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
uuid             = { version = "1", features = ["v4"] }
thiserror        = "2"
async-channel    = "2"
lru              = "0.12"
clap             = { version = "4", features = ["derive"] }
reqwest          = { version = "0.12", features = ["json"] }
futures          = "0.3"
bytemuck         = { version = "1", features = ["derive"] }
async-trait      = "0.1"
chrono           = "0.4"
ratatui          = "0.29"
crossterm        = { version = "0.28", features = ["event-stream"] }
axum             = { version = "0.8", features = ["ws"] }
jsonschema       = "0.28"
tower-http       = { version = "0.6", features = ["cors", "trace"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml             = "0.8"
